Fix section-2.css whitespace

--- a/Section 2/section-2.css
+++ b/Section 2/section-2.css
@@ -5,32 +5,32 @@ body {
 }
 
 h1 {
-    font-family: 'Oswald', sans-serif;
-    color: rgb(83, 75, 75);
-  }
+  font-family: "Oswald", sans-serif;
+  color: rgb(83, 75, 75);
+}
 
-  p {
-    font-family: 'Fira Sans', sans-serif;
-    color: rgb(83, 75, 75);
-  }
+p {
+  font-family: "Fira Sans", sans-serif;
+  color: rgb(83, 75, 75);
+}
 
-  a {
-    color: rgb(167, 1, 78);
-    text-decoration: none;
-  }
-  
-  a:hover {
-    text-decoration: underline;
-  }
+a {
+  color: rgb(167, 1, 78);
+  text-decoration: none;
+}
 
-  #todays-challenge {
-    color: rgb(170, 96, 83);
-    font-weight: bold;
-    font-size: 52px;
-  }
+a:hover {
+  text-decoration: underline;
+}
 
-  img {
-    width: 200px;
-    height: 200px;
-    border-radius: 100px;
-  }
+#todays-challenge {
+  color: rgb(170, 96, 83);
+  font-weight: bold;
+  font-size: 52px;
+}
+
+img {
+  width: 200px;
+  height: 200px;
+  border-radius: 100px;
+}
